fixed bottom spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -398,7 +398,7 @@ body{
 }
 .page-bgc{
 	background-color: #fff;
-	padding-bottom: 100px;
+	padding-bottom: 30px;
 }
 
 .intro{
